Implement plaid link and Dwolla

--- a/.env
+++ b/.env
@@ -18,7 +18,7 @@ PLAID_PRODUCTS=auth,transactions,identity
 PLAID_COUNTRY_CODES=EU
 
 #DWOLLA
-DWOLLA_KEY=
-DWOLLA_SECRET=
-DWOLLA_BASE_URL=
-DWOLLA_ENV=
+DWOLLA_KEY=BwSmbNASqr83TFT3fcn3G3N4CE69HzcpHoLKwMSDZsBz8m4olO
+DWOLLA_SECRET=5KimCP8RWubSnS8reZY9RlqoKjwcy3fU0nvOkhadFuIELmv9Jc
+DWOLLA_BASE_URL=https://api-sandbox.dwolla.com
+DWOLLA_ENV=sandbox
