--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chart.js": "^4.4.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dwolla-v2": "^3.4.0",
     "lucide-react": "^0.438.0",
     "next": "14.2.7",
     "node-appwrite": "^14.1.0",
