update on implement PlaidLink and Dwolla

--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@ PLAID_CLIENT_ID=66e2cb005021c6001a1fce30
 PLAID_SECRET=aa5e2145d4078e73e484b0b576abc1
 PLAID_ENV=sandbox
 PLAID_PRODUCTS=auth,transactions,identity
-PLAID_COUNTRY_CODES=EU
+PLAID_COUNTRY_CODES=US,CA,EU
 
 #DWOLLA
 DWOLLA_KEY=BwSmbNASqr83TFT3fcn3G3N4CE69HzcpHoLKwMSDZsBz8m4olO
